# ESP32-iperf-W5500

./: sdkconfig  sdkconfig.old
lib/ioLibrary_Driver/Application/loopback/: loopback.c
lib/ioLibrary_Driver/Ethernet/: socket.c  wizchip_conf.h
lib/ioLibrary_Driver/Ethernet/W5500/: w5500.c
lib/ioLibrary_Driver/Ethernet/W6300/: w6300.c
lib/iperf/: cJSON.c  cJSON.h  iperf.c  iperf.h
main/: CMakeLists.txt  cmd_ethernet.c  ethernet_iperf_main.c
port/ioLibrary_Driver/inc/: wizchip_spi.h
port/ioLibrary_Driver/src/: wizchip_spi.c
